logs/watchdog_20251012_0530.log
[12/10/2025  5:30:01,73] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025  5:30:02,05] END WATCHDOG 
